tests/java5/generics/decp/binary/Asp2.aj
aspect Asp2 {
    declare parents: B* implements I<Integer>; // error
}
